--- a/app/src/main/res/layout/design_layout.xml
+++ b/app/src/main/res/layout/design_layout.xml
@@ -8,6 +8,7 @@
     app:cardCornerRadius="8dp">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
